Menu and Settings views created

--- a/demo/Base.lproj/Main.storyboard
+++ b/demo/Base.lproj/Main.storyboard
@@ -39,13 +39,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SETTINGS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jPR-Oo-fKN">
-                                <rect key="frame" x="118" y="250" width="139" height="36"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="settingsBG.png" translatesAutoresizingMaskIntoConstraints="NO" id="kOm-3d-CX4">
+                                <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="e8a-6c-gfH"/>
@@ -53,7 +50,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="naP-Jj-oXH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="688.79999999999995" y="542.87856071964018"/>
+            <point key="canvasLocation" x="688.60569715142435" y="541.60000000000002"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tXr-a1-R10">
@@ -66,15 +63,16 @@
                         <viewLayoutGuide key="safeArea" id="MRp-Sp-7U3"/>
                     </view>
                     <connections>
-                        <outlet property="sceneView" destination="8Lc-cJ-LnI" id="ebC-9h-3qN"/>
+                        <outlet property="sceneView" destination="8Lc-cJ-LnI" id="bwJ-j1-UEc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1756" y="-94"/>
+            <point key="canvasLocation" x="1464" y="-78"/>
         </scene>
     </scenes>
     <resources>
         <image name="background.png" width="1334" height="750"/>
+        <image name="settingsBG.png" width="1334" height="750"/>
     </resources>
 </document>
